--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ MathJax.Hub.Config({
 <td id="layout-menu">
 <div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="http://jingwang.site" target="blank">Blog</a></div>
+<div class="menu-item"><a href="https://blog.jingwang.site" target="blank">Blog</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -90,7 +90,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-01 19:45:42 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-01 21:17:22 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
