--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ MathJax.Hub.Config({
 <li><p>2019.06, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Graduate.pdf" target=&ldquo;blank&rdquo;>Huazhong Agricultural University Excellent Graduate</a>
 </p>
 </li>
-<li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Bachelor¡¯s-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>Huazhong Agricultural University Excellent Bachelor's Degree Thesis</a>
+<li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>Huazhong Agricultural University Excellent Bachelor Degree Thesis</a>
 </p>
 </li>
 <li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>National Innovation Contest for Intelligent Construction and Management, First prize</a>
@@ -90,7 +90,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-02 00:03:28 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-02 13:41:15 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
