--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ MathJax.Hub.Config({
 <li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, in preparation.
 </p>
 </li>
-<li><p>Housheng Su* and <b>Jingwang Li</b>. &ldquo;Distributed continuous-time primal-dual algorithms for constrained optimization with exponential convergence&rdquo;, under review (The first author and the corresponding author are both my supervisor).
+<li><p>Housheng Su* and <b>Jingwang Li</b>. &ldquo;Distributed continuous-time primal-dual algorithms for constrained optimization with exponential convergence&rdquo;, under review.
 </p>
 </li>
 </ol>
@@ -90,7 +90,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-02 13:41:15 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-07 14:14:09 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
