--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@ MathJax.Hub.Config({
 </p>
 </td></tr></table>
 <h2>Research Interests</h2>
-<p>Distributed/Decentralized Optimization, Operations Research, Data Mining.
+<p>Distributed/Decentralized Optimization, Operations Research, Game Theory, Data Mining.
 </p>
 <h2>Education</h2>
 <ul>
 <li><p>2015-2016 : Aquatic Science &amp; Technology, College of Fisheries, Huazhong Agricultural University
 </p>
 </li>
-<li><p>2016-2019 : Engineering Management(B.S.), School of Public Administration, Huazhong Agricultural University
+<li><p>2016-2019 : Engineering Management (B.S.), School of Public Administration, Huazhong Agricultural University
 </p>
 </li>
 <li><p>2019-2022 : Control Science &amp; Engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
@@ -90,7 +90,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-07 14:14:09 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-08 12:57:31 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
