--- a/index.html
+++ b/index.html
@@ -72,10 +72,7 @@ MathJax.Hub.Config({
 </ul>
 <h2>Publications</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Accelerated distributed gradient descent&rdquo;, in preparation.
-</p>
-</li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, in preparation.
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, submitted.
 </p>
 </li>
 <li><p>Housheng Su* and <b>Jingwang Li</b>. &ldquo;Distributed continuous-time primal-dual algorithms for constrained optimization with exponential convergence&rdquo;, under review.
@@ -90,7 +87,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-08 12:57:31 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-05-10 22:49:57 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
