--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@ MathJax.Hub.Config({
 </ul>
 <h2>Publications</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;, in preparation.
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;, to be submitted.
 </p>
 </li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, submitted.
 </p>
 </li>
-<li><p>Housheng Su* and <b>Jingwang Li</b>. &ldquo;Distributed continuous-time primal-dual algorithms for constrained optimization with exponential convergence&rdquo;, under review.
+<li><p>Housheng Su* and <b>Jingwang Li</b>. &ldquo;Distributed continuous-time primal-dual algorithms for constrained optimization with exponential convergence&rdquo;, submitted.
 </p>
 </li>
 </ol>
@@ -91,7 +91,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-05-30 14:05:55 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-06-17 23:10:25 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
