--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@ MathJax.Hub.Config({
 </ul>
 <h2>Publications</h2>
 <ol>
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Fast nested decentralized gradient methods&rdquo;, in preparation.
+</p>
+</li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, submitted.
 </p>
 </li>
@@ -88,7 +91,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-06-27 19:35:11 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-07-15 13:46:38 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
