--- a/index.html
+++ b/index.html
@@ -71,18 +71,15 @@ MathJax.Hub.Config({
 </p>
 </li>
 </ul>
-<h2>Publications</h2>
+<h2>Papers</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;An unified primal-dual framework for distributed constraint-coupled optimization&rdquo;, in preparation.
-</p>
-</li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Fast nested decentralized gradient methods&rdquo;, submitted.
 </p>
 </li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, submitted.
 </p>
 </li>
-<li><p>Housheng Su* and <b>Jingwang Li</b>. &ldquo;Distributed continuous-time primal-dual algorithms for constrained optimization with exponential convergence&rdquo;, submitted.
+<li><p>Housheng Su*, <b>Jingwang Li</b> and Zhigang Zeng. &ldquo;Distributed continuous-time primal-dual algorithms for constrained optimization with exponential convergence&rdquo;, submitted.
 </p>
 </li>
 </ol>
@@ -94,7 +91,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-21 11:05:50 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-08-23 22:35:45 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
