--- a/index.html
+++ b/index.html
@@ -73,13 +73,19 @@ MathJax.Hub.Config({
 </ul>
 <h2>Papers</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Fast nested decentralized gradient methods&rdquo;, submitted.
-</p>
-</li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, submitted.
 </p>
 </li>
-<li><p>Housheng Su*, <b>Jingwang Li</b> and Zhigang Zeng. &ldquo;Distributed continuous-time primal-dual algorithms for constrained optimization with exponential convergence&rdquo;, submitted.
+<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;, submitted.
+</p>
+</li>
+<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;, submitted.
+</p>
+</li>
+<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Fast nested decentralized gradient methods&rdquo;, submitted.
+</p>
+</li>
+<li><p>Housheng Su*, <b>Jingwang Li</b> and Zhigang Zeng. &ldquo;Exponentially convergent distributed continuous-time primal-dual algorithm for constrained optimization&rdquo;, submitted.
 </p>
 </li>
 </ol>
@@ -91,7 +97,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-23 22:35:45 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-09-07 10:10:47 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
