--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@ MathJax.Hub.Config({
 </p>
 </td></tr></table>
 <h2>Research Interests</h2>
-<p>Distributed/Decentralized Optimization, Operations Research, Game Theory, Data Mining.
+<p>Distributed/Decentralized Optimization, Operations Research.
 </p>
 <h2>Education</h2>
 <ul>
 <li><p>2015-2016 : Aquatic Science &amp; Technology, College of Fisheries, Huazhong Agricultural University
 </p>
 </li>
-<li><p>2016-2019 : Engineering Management (B.S.), School of Public Administration, Huazhong Agricultural University
+<li><p>2016-2019 : B.Mgt. in Engineering Management, School of Public Administration, Huazhong Agricultural University
 </p>
 </li>
 <li><p>2019-2022 : Control Science &amp; Engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
@@ -85,9 +85,6 @@ MathJax.Hub.Config({
 <li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Fast nested decentralized gradient methods&rdquo;, submitted.
 </p>
 </li>
-<li><p>Housheng Su*, <b>Jingwang Li</b> and Zhigang Zeng. &ldquo;Exponentially convergent distributed continuous-time primal-dual algorithm for constrained optimization&rdquo;, submitted.
-</p>
-</li>
 </ol>
 <h2>Footmarks</h2>
 <p><div id="myMap" style="width: 100%;height:600px;"></div>
@@ -97,7 +94,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-07 10:10:47 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2021-09-10 23:20:12 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
