--- a/index.html
+++ b/index.html
@@ -43,49 +43,43 @@ MathJax.Hub.Config({
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>2015-2016 : Aquatic Science &amp; Technology, College of Fisheries, Huazhong Agricultural University
-</p>
-</li>
-<li><p>2016-2019 : B.Mgt. in Engineering Management, School of Public Administration, Huazhong Agricultural University
-</p>
-</li>
 <li><p>2019-2022 : Control Science &amp; Engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
 </p>
 </li>
+<li><p>2016-2019 : B.Mgmt. in Engineering Management, School of Public Administration, Huazhong Agricultural University
+</p>
+</li>
+<li><p>2015-2016 : Aquatic Science &amp; Technology, College of Fisheries, Huazhong Agricultural University
+</p>
+</li>
 </ul>
+<h2>Preprints</h2>
+<ol>
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, arXiv preprint arXiv:2201.07627.
+</p>
+</li>
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: a unified approach to smooth distributed optimization&rdquo;</a>, arXiv preprint arXiv:2202.09804.
+</p>
+</li>
+</ol>
 <h2>Awards</h2>
 <ul>
-<li><p>2017.11, <a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>China Undergraduate Mathematical Contest in Modeling, First prize</a>
-</p>
-</li>
-<li><p>2017.12, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>Huazhong Agricultural University Sixth Programming Contest, Second Prize</a>
-</p>
-</li>
-<li><p>2019.06, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Graduate.pdf" target=&ldquo;blank&rdquo;>Huazhong Agricultural University Excellent Graduate</a>
+<li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>National Innovation Contest for Intelligent Construction and Management, First prize</a>
 </p>
 </li>
 <li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>Huazhong Agricultural University Excellent Bachelor Degree Thesis</a>
 </p>
 </li>
-<li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>National Innovation Contest for Intelligent Construction and Management, First prize</a>
+<li><p>2019.06, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Graduate.pdf" target=&ldquo;blank&rdquo;>Huazhong Agricultural University Excellent Graduate</a>
+</p>
+</li>
+<li><p>2017.12, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>Huazhong Agricultural University Sixth Programming Contest, Second Prize</a>
+</p>
+</li>
+<li><p>2017.11, <a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>China Undergraduate Mathematical Contest in Modeling, First prize</a>
 </p>
 </li>
 </ul>
-<h2>Papers</h2>
-<ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;, submitted.
-</p>
-</li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. &ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;, submitted.
-</p>
-</li>
-<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;, submitted.
-</p>
-</li>
-<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Fast nested decentralized gradient methods&rdquo;, submitted.
-</p>
-</li>
-</ol>
 <h2>Footmarks</h2>
 <p><div id="myMap" style="width: 100%;height:600px;"></div>
 <script type="text/javascript" src="./js/echarts.min.js"></script>
@@ -94,7 +88,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-10 23:20:12 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-03-06 20:47:11 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
