--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ MathJax.Hub.Config({
 <li><p>2016-2019 : B.Mgmt. in Engineering Management, School of Public Administration, Huazhong Agricultural University
 </p>
 </li>
-<li><p>2015-2016 : Aquatic Science &amp; Technology, College of Fisheries, Huazhong Agricultural University
+<li><p>2015-2016 : Aquatic Science &amp; Technology, School of Fisheries, Huazhong Agricultural University
 </p>
 </li>
 </ul>
@@ -88,7 +88,7 @@ MathJax.Hub.Config({
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-06 20:47:11 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-03-06 20:53:36 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
