--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ MathJax.Hub.Config({
 </p>
 </td></tr></table>
 <h2>Research Interests</h2>
-<p>Distributed/Decentralized Optimization, Operations Research.
+<p>Distributed/decentralized optimization.
 </p>
 <h2>Education</h2>
 <ul>
@@ -64,31 +64,28 @@ MathJax.Hub.Config({
 </ol>
 <h2>Awards</h2>
 <ul>
+<li><p>2022.05, Excellent Graduate of Huazhong University of Science &amp; Technology
+</p>
+</li>
 <li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>National Innovation Contest for Intelligent Construction and Management, First prize</a>
 </p>
 </li>
-<li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>Huazhong Agricultural University Excellent Bachelor Degree Thesis</a>
+<li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>Excellent Bachelor Degree Thesis of Huazhong Agricultural University</a>
 </p>
 </li>
-<li><p>2019.06, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Graduate.pdf" target=&ldquo;blank&rdquo;>Huazhong Agricultural University Excellent Graduate</a>
+<li><p>2019.06, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Graduate.pdf" target=&ldquo;blank&rdquo;>Excellent Graduate of Huazhong Agricultural University</a>
 </p>
 </li>
-<li><p>2017.12, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>Huazhong Agricultural University Sixth Programming Contest, Second Prize</a>
+<li><p>2017.12, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>The Sixth Programming Contest of Huazhong Agricultural University, Second Prize</a>
 </p>
 </li>
 <li><p>2017.11, <a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>China Undergraduate Mathematical Contest in Modeling, First prize</a>
 </p>
 </li>
 </ul>
-<h2>Footmarks</h2>
-<p><div id="myMap" style="width: 100%;height:600px;"></div>
-<script type="text/javascript" src="./js/echarts.min.js"></script>
-<script type="text/javascript" src="./js/china.js"></script>
-<script type="text/javascript" src="./js/footprint.js"></script>
-</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-06 20:53:36 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-05-10 12:46:05 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
