--- a/main/index.html
+++ b/main/index.html
@@ -30,7 +30,7 @@
 </p>
 </td></tr></table>
 <h2>Research Interests</h2>
-<p>Distributed/decentralized optimization, federated learning, trajectory optimization.
+<p>Distributed/decentralized optimization and learning.
 </p>
 <h2>Education</h2>
 <ul>
@@ -49,7 +49,7 @@
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, arXiv preprint arXiv:2201.07627.
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: a unified approach to smooth distributed optimization&rdquo;</a>, arXiv preprint arXiv:2202.09804.
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, arXiv preprint arXiv:2202.09804.
 </p>
 </li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>&ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;</a>, arXiv preprint arXiv:2205.11119.
@@ -79,7 +79,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-24 14:18:15 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-05-24 23:07:30 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
