--- a/main/index.html
+++ b/main/index.html
@@ -34,13 +34,13 @@
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>2019-2022 : Control Science &amp; Engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
+<li><p>2019.09-2022.06 : M.S. in Control Science &amp; Engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
 </p>
 </li>
-<li><p>2016-2019 : B.Mgmt. in Engineering Management, School of Public Administration, Huazhong Agricultural University
+<li><p>2016.09-2019.06 : B.Mgmt. in Engineering Management, School of Public Administration, Huazhong Agricultural University
 </p>
 </li>
-<li><p>2015-2016 : Aquatic Science &amp; Technology, School of Fisheries, Huazhong Agricultural University
+<li><p>2015.09-2016.07 : Aquatic Science &amp; Technology, School of Fisheries, Huazhong Agricultural University
 </p>
 </li>
 </ul>
@@ -70,7 +70,7 @@
 <li><p>2019.06, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Graduate.pdf" target=&ldquo;blank&rdquo;>Excellent Graduate of Huazhong Agricultural University</a>
 </p>
 </li>
-<li><p>2017.12, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>The Sixth Programming Contest of Huazhong Agricultural University, Second Prize</a>
+<li><p>2017.12, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>The Sixth Programming Contest of Huazhong Agricultural University, Second prize</a>
 </p>
 </li>
 <li><p>2017.11, <a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>China Undergraduate Mathematical Contest in Modeling, First prize</a>
@@ -79,7 +79,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-24 23:07:30 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-06-13 20:56:24 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
