--- a/main/index.html
+++ b/main/index.html
@@ -58,13 +58,13 @@
 </ol>
 <h2>Awards</h2>
 <ul>
-<li><p>2022.05, <a href="http://storage.jingwang.site/doc/2022-HUST-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong University of Science &amp; Technology</a>
+<li><p>2022.06, <a href="http://storage.jingwang.site/doc/2022-HUST-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong University of Science &amp; Technology</a>
 </p>
 </li>
 <li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>National Innovation Contest for Intelligent Construction and Management, First prize</a>
 </p>
 </li>
-<li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-HZAU-Excellent-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>Excellent Bachelor Degree Thesis of Huazhong Agricultural University</a>
+<li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>Outstanding Bachelor Degree Thesis of Huazhong Agricultural University</a>
 </p>
 </li>
 <li><p>2019.06, <a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong Agricultural University</a>
@@ -79,7 +79,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-22 15:54:50 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-06-23 21:28:29 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
