--- a/main/index.html
+++ b/main/index.html
@@ -22,9 +22,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="./ljw.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
-<td align="left"><p>Master sudent, major in Control Science &amp; Engineering
-<br /> School of Artifical Intelligence &amp; Automation
-<br /> Huazhong University of Science &amp; Technology
+<td align="left"><p>Algorithm engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>fabu.ai</a>
 <br /> Email: <a href="mailto:JingwangLi@outlook.com" target=&ldquo;blank&rdquo;>JingwangLi@outlook.com</a>
 <br /> <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://www.researchgate.net/profile/Jingwang_Li" target=&ldquo;blank&rdquo;>ResearchGate</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 </p>
@@ -79,7 +77,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-23 21:28:29 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-06-27 23:21:01 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
