--- a/main/index.html
+++ b/main/index.html
@@ -22,9 +22,10 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="./ljw.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
-<td align="left"><p>Algorithm Engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>fabu.ai</a>
-<br /> Email: <a href="mailto:JingwangLi@outlook.com" target=&ldquo;blank&rdquo;>JingwangLi@outlook.com</a>
-<br /> <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://www.researchgate.net/profile/Jingwang_Li" target=&ldquo;blank&rdquo;>ResearchGate</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
+<td align="left"><h2>About</h2>
+<p>I am an algorithm engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>fabu.ai</a> since June 2022. Before that, I was a master student in the School of Artifical Intelligence &amp; Automation of Huazhong University of Science &amp; Technology, where I worked on distributed/decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Housheng Su</a>. Prior to that, I graduated from Huazhong Agricultural University and got a bachelor degree in management, where I transfered from the School of Fisheries to the School of Public Administration in the sophomore year.
+
+<br /> <a href="mailto:JingwangLi@outlook.com" target=&ldquo;blank&rdquo;>Email</a> | <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://www.researchgate.net/profile/Jingwang_Li" target=&ldquo;blank&rdquo;>ResearchGate</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 </p>
 </td></tr></table>
 <h2>Research Interests</h2>
@@ -42,15 +43,18 @@
 </p>
 </li>
 </ul>
+<h2>Publications</h2>
+<ol>
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2201.07627" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, Conditionally accepted by IEEE Transactions on Control of Network Systems. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+</p>
+</li>
+</ol>
 <h2>Preprints</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, arXiv preprint arXiv:2201.07627.
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2202.09804" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, arXiv preprint arXiv:2202.09804. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, arXiv preprint arXiv:2202.09804.
-</p>
-</li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>&ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;</a>, arXiv preprint arXiv:2205.11119.
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;</a>, arXiv preprint arXiv:2205.11119. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
 </ol>
@@ -77,7 +81,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-27 23:33:32 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-07-02 23:47:46 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
