--- a/main/index.html
+++ b/main/index.html
@@ -23,7 +23,7 @@
 <table class="imgtable"><tr><td>
 <img src="./ljw.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><h2>About</h2>
-<p>I am an algorithm engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>fabu.ai</a> since June 2022. Before that, I was a master student in the School of Artifical Intelligence &amp; Automation of Huazhong University of Science &amp; Technology, where I worked on distributed/decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Housheng Su</a>. Prior to that, I graduated from Huazhong Agricultural University and got a bachelor degree in management, where I transfered from the School of Fisheries to the School of Public Administration in the sophomore year.
+<p>Since Jun. 2022, I has been an autopilot algorithm engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I focus on modeling and solving a large number of optimization problems emerging in the field of autonomous driving. Before that, I was a master student in the School of Artifical Intelligence &amp; Automation of Huazhong University of Science &amp; Technology, where I worked on distributed/decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Housheng Su</a>. Prior to that, I graduated from Huazhong Agricultural University and got a bachelor degree in management, where I transfered from the School of Fisheries to the School of Public Administration in the sophomore year.
 
 <br /> <a href="mailto:JingwangLi@outlook.com" target=&ldquo;blank&rdquo;>Email</a> | <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://www.researchgate.net/profile/Jingwang_Li" target=&ldquo;blank&rdquo;>ResearchGate</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 </p>
@@ -33,24 +33,21 @@
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>2019.09-2022.06 : M.S. in Control Science &amp; Engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
+<li><p>Sept. 2019 - Jun. 2022 : M.S. in Control Science &amp; Engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
 </p>
 </li>
-<li><p>2016.09-2019.06 : B.Mgmt. in Engineering Management, School of Public Administration, Huazhong Agricultural University
+<li><p>Sept. 2016 - Jun. 2019 : B.Mgmt. in Engineering Management, School of Public Administration, Huazhong Agricultural University
 </p>
 </li>
-<li><p>2015.09-2016.07 : Aquatic Science &amp; Technology, School of Fisheries, Huazhong Agricultural University
+<li><p>Sept. 2015 - Jul. 2016 : Aquatic Science &amp; Technology, School of Fisheries, Huazhong Agricultural University
 </p>
 </li>
 </ul>
-<h2>Publications</h2>
+<h2>Papers</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2201.07627" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, Conditionally accepted by IEEE Transactions on Control of Network Systems. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2201.07627" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, conditionally accepted by IEEE Transactions on Control of Network Systems. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-</ol>
-<h2>Preprints</h2>
-<ol>
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2202.09804" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, arXiv preprint arXiv:2202.09804. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
@@ -60,28 +57,28 @@
 </ol>
 <h2>Awards</h2>
 <ul>
-<li><p>2022.06, <a href="http://storage.jingwang.site/doc/2022-HUST-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong University of Science &amp; Technology</a>
+<li><p>Jun. 2022, <a href="http://storage.jingwang.site/doc/2022-HUST-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong University of Science &amp; Technology</a>
 </p>
 </li>
-<li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>National Innovation Contest for Intelligent Construction and Management, First prize</a>
+<li><p>Sept. 2019, <a href="http://storage.jingwang.site/doc/2019-ICICM.pdf" target=&ldquo;blank&rdquo;>National Innovation Contest for Intelligent Construction and Management, First prize</a>
 </p>
 </li>
-<li><p>2019.09, <a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>Outstanding Bachelor Degree Thesis of Huazhong Agricultural University</a>
+<li><p>Sept. 2019, <a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Bachelor-Degree-Thesis.pdf" target=&ldquo;blank&rdquo;>Outstanding Bachelor Degree Thesis of Huazhong Agricultural University</a>
 </p>
 </li>
-<li><p>2019.06, <a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong Agricultural University</a>
+<li><p>Jun. 2019, <a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong Agricultural University</a>
 </p>
 </li>
-<li><p>2017.12, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>The Sixth Programming Contest of Huazhong Agricultural University, Second prize</a>
+<li><p>Dec. 2017, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>The Sixth Programming Contest of Huazhong Agricultural University, Second prize</a>
 </p>
 </li>
-<li><p>2017.11, <a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>China Undergraduate Mathematical Contest in Modeling, First prize</a>
+<li><p>Nov. 2017, <a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>China Undergraduate Mathematical Contest in Modeling, First prize</a>
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-07-02 23:47:46 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-07-05 13:31:48 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
