--- a/main/index.html
+++ b/main/index.html
@@ -7,6 +7,15 @@
 <link rel="icon" href="./mylogo.jpg">
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Jingwang Li</title>
+<!-- MathJax -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
+</script>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+	  TeX: { equationNumbers: { autoNumber: "AMS" } }
+});
+</script>
+<!-- End MathJax -->
 </head>
 <body>
 <table summary="Table for page layout." id="tlayout">
@@ -23,7 +32,7 @@
 <table class="imgtable"><tr><td>
 <img src="./ljw.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><h2>About</h2>
-<p>Since Jun. 2022, I has been an autopilot algorithm engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I focus on addressing a large number of optimization problems emerging in the field of autonomous driving. Before that, I was a master student in the School of Artifical Intelligence &amp; Automation of Huazhong University of Science &amp; Technology, where I worked on distributed/decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Housheng Su</a>. Prior to that, I graduated from Huazhong Agricultural University and got a bachelor degree in management, where I transfered from the School of Fisheries to the School of Public Administration in the sophomore year.
+<p>Since Jun. 2022, I has been an autopilot algorithm engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I focus on addressing various optimization problems emerging in the field of autonomous driving. Before that, I was a master student in the School of Artifical Intelligence &amp; Automation of Huazhong University of Science &amp; Technology, where I worked on distributed/decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Housheng Su</a>. Prior to that, I graduated from Huazhong Agricultural University and got a bachelor degree in management, where I transfered from the School of Fisheries to the School of Public Administration in the sophomore year.
 
 <br /> <a href="mailto:JingwangLi@outlook.com" target=&ldquo;blank&rdquo;>Email</a> | <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://www.researchgate.net/profile/Jingwang_Li" target=&ldquo;blank&rdquo;>ResearchGate</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 </p>
@@ -43,9 +52,9 @@
 </p>
 </li>
 </ul>
-<h2>Preprints</h2>
+<h2>Papers</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, arXiv preprint arXiv:2201.07627. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2201.07627" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, accepted by IEEE Transactions on Control of Network Systems. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2202.09804" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, arXiv preprint arXiv:2202.09804. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
@@ -78,7 +87,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-07-05 22:27:57 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-08-30 09:59:China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
