--- a/main/mysite.conf.html
+++ b/main/mysite.conf.html
@@ -25,7 +25,7 @@ TeX: { equationNumbers: { autoNumber: &ldquo;AMS&rdquo; } }
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-07-05 22:27:57 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-02 12:21:China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </div>
