--- a/main/index.html
+++ b/main/index.html
@@ -48,10 +48,10 @@
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, IEEE Transactions on Control of Network Systems, 2022. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2202.09804" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, arXiv preprint arXiv:2202.09804. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2202.09804" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, arXiv:2202.09804, 2022. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;</a>, arXiv preprint arXiv:2205.11119. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;</a>, arXiv:2205.11119, 2022. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
 </ol>
@@ -78,7 +78,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-02 12:21:China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-02 12:50:China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
