--- a/main/index.html
+++ b/main/index.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><h2>About</h2>
-<p>Since Jun. 2022, I has been an autopilot algorithm engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I focus on addressing various optimization problems emerging in the field of autonomous driving. Before that, I was a master student in the School of Artifical Intelligence &amp; Automation of Huazhong University of Science &amp; Technology, where I worked on distributed/decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Housheng Su</a>. Prior to that, I graduated from Huazhong Agricultural University and got a bachelor degree in management, where I transfered from the School of Fisheries to the School of Public Administration in the sophomore year.
+<p>Since Jun. 2022, I has been an autopilot algorithm engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I focus on addressing various optimization problems emerging in autonomous driving. Before that, I was a master student in the School of Artifical Intelligence &amp; Automation of Huazhong University of Science &amp; Technology, where I worked on distributed/decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Housheng Su</a>. Prior to that, I graduated from Huazhong Agricultural University and got a bachelor degree in engineering management.
 
 <br /> <a href="mailto:JingwangLi@outlook.com" target=&ldquo;blank&rdquo;>Email</a> | <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://www.researchgate.net/profile/Jingwang_Li" target=&ldquo;blank&rdquo;>ResearchGate</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 </p>
@@ -45,26 +45,33 @@ MathJax.Hub.Config({
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>Sept. 2019 - Jun. 2022 : M.S. in Control Science &amp; Engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
+<li><p>Sept. 2019 - Jun. 2022 : M.S. in control science &amp; engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
 </p>
 </li>
-<li><p>Sept. 2016 - Jun. 2019 : B.Mgmt. in Engineering Management, School of Public Administration, Huazhong Agricultural University
+<li><p>Sept. 2016 - Jun. 2019 : B.S. in engineering management, School of Public Administration, Huazhong Agricultural University
 </p>
 </li>
-<li><p>Sept. 2015 - Jul. 2016 : Aquatic Science &amp; Technology, School of Fisheries, Huazhong Agricultural University
+<li><p>Sept. 2015 - Jul. 2016 : aquatic science &amp; technology, School of Fisheries, Huazhong Agricultural University
 
 </p>
 </li>
 </ul>
-<h2>Papers</h2>
+<h2>Preprints</h2>
 <ol>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, IEEE Transactions on Control of Network Systems, 2022. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;</a>, <i>arXiv:2205.11119</i>, 2022. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2202.09804" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, arXiv:2202.09804, 2022. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2202.09804" target=&ldquo;blank&rdquo;>&ldquo;Gradient tracking: A unified approach to smooth distributed optimization&rdquo;</a>, <i>arXiv:2202.09804</i>, 2022. [<a href="https://arxiv.org/pdf/2202.09804.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+
 </p>
 </li>
-<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://arxiv.org/abs/2205.11119" target=&ldquo;blank&rdquo;>&ldquo;Nested primal-dual gradient algorithms for distributed constraint-coupled optimization&rdquo;</a>, arXiv:2205.11119, 2022. [<a href="https://arxiv.org/pdf/2205.11119.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+</ol>
+<h2>Publications</h2>
+<ol>
+<li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, <i>IEEE Transactions on Control of Network Systems</i>, 2022. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
+</p>
+</li>
+<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;, <i>Applied Mathematics and Computation</i>, 2023.
 
 </p>
 </li>
@@ -83,7 +90,7 @@ MathJax.Hub.Config({
 <li><p>Jun. 2019, <a href="http://storage.jingwang.site/doc/2019-HZAU-Outstanding-Graduate.pdf" target=&ldquo;blank&rdquo;>Outstanding Graduate of Huazhong Agricultural University</a>
 </p>
 </li>
-<li><p>Dec. 2017, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>The Sixth Programming Contest of Huazhong Agricultural University, Second prize</a>
+<li><p>Dec. 2017, <a href="http://storage.jingwang.site/doc/2017-HZAU-Programming-Contest.pdf" target=&ldquo;blank&rdquo;>Programming Contest of Huazhong Agricultural University, Second prize</a>
 </p>
 </li>
 <li><p>Nov. 2017, <a href="http://storage.jingwang.site/doc/2017-CUMCM.pdf" target=&ldquo;blank&rdquo;>China Undergraduate Mathematical Contest in Modeling, First prize</a>
@@ -95,12 +102,15 @@ MathJax.Hub.Config({
 
 
 
+
+
+
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-04 20:57:20 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-12-21 22:40:28 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
