Add DOI of Prox-NPGA

--- a/main/index.html
+++ b/main/index.html
@@ -45,13 +45,13 @@ MathJax.Hub.Config({
 </p>
 <h2>Education</h2>
 <ul>
-<li><p>Sept. 2019 - Jun. 2022 : M.S. in control science &amp; engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
+<li><p>Sept. 2019 - Jun. 2022 : M.S. in Control Science &amp; Engineering, School of Artifical Intelligence &amp; Automation, Huazhong University of Science &amp; Technology
 </p>
 </li>
-<li><p>Sept. 2016 - Jun. 2019 : B.S. in engineering management, School of Public Administration, Huazhong Agricultural University
+<li><p>Sept. 2016 - Jun. 2019 : B.S. in Engineering Management, School of Public Administration, Huazhong Agricultural University
 </p>
 </li>
-<li><p>Sept. 2015 - Jul. 2016 : aquatic science &amp; technology, School of Fisheries, Huazhong Agricultural University
+<li><p>Sept. 2015 - Jul. 2016 : Aquatic Science &amp; Technology, School of Fisheries, Huazhong Agricultural University
 
 </p>
 </li>
@@ -71,7 +71,7 @@ MathJax.Hub.Config({
 <li><p><b>Jingwang Li</b> and Housheng Su*. <a href="https://doi.org/10.1109/TCNS.2022.3203486" target=&ldquo;blank&rdquo;>&ldquo;Implicit tracking-based distributed constraint-coupled optimization&rdquo;</a>, <i>IEEE Transactions on Control of Network Systems</i>, 2022. [<a href="https://arxiv.org/pdf/2201.07627.pdf" target=&ldquo;blank&rdquo;>PDF</a>]
 </p>
 </li>
-<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. &ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;, <i>Applied Mathematics and Computation</i>, 2023.
+<li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. <a href="https://doi.org/10.1016/j.amc.2022.127801" target=&ldquo;blank&rdquo;>&ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;</a>, <i>Applied Mathematics and Computation</i>, 2023.
 
 </p>
 </li>
@@ -110,7 +110,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-12-21 22:40:28 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-01-07 18:30:06 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
