--- a/main/index.html
+++ b/main/index.html
@@ -34,13 +34,13 @@ MathJax.Hub.Config({
 <table class="imgtable"><tr><td>
 <img src="./JingwangLi.jpg" alt="alt text" width="150px" height="200px" />&nbsp;</td>
 <td align="left"><h2>About</h2>
-<p>Since Jun. 2022, I has been an R&amp;D engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I focus on addressing various optimization problems emerging in autonomous driving. Before that, I was a master student in the School of Artifical Intelligence &amp; Automation of Huazhong University of Science &amp; Technology, where I worked on distributed/decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Prior to that, I graduated from Huazhong Agricultural University and got a bachelor degree in engineering management.
+<p>Since Jun. 2022, I has been an R&amp;D engineer in <a href="http://www.fabu.ai" target=&ldquo;blank&rdquo;>FABU.AI</a>, where I focus on addressing various optimization problems emerging in autonomous driving. Before that, I was a master student in the School of Artifical Intelligence &amp; Automation of Huazhong University of Science &amp; Technology, where I worked on decentralized optimization under the supervision of <a href="https://www.researchgate.net/profile/Housheng-Su" target=&ldquo;blank&rdquo;>Prof. Housheng Su</a>. Prior to that, I graduated from Huazhong Agricultural University and got a bachelor degree in engineering management.
 
-<br /> <a href="mailto:JingwangLi@outlook.com" target=&ldquo;blank&rdquo;>Email</a> | <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://www.researchgate.net/profile/Jingwang_Li" target=&ldquo;blank&rdquo;>ResearchGate</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
+<br /> <a href="mailto:JingwangLi@outlook.com" target=&ldquo;blank&rdquo;>Email</a> | <a href="https://scholar.google.com/citations?user=FPh5CyoAAAAJ&amp;hl=en" target=&ldquo;blank&rdquo;>Google Scholar</a> | <a href="https://github.com/JingwangLi" target=&ldquo;blank&rdquo;>Github</a>
 </p>
 </td></tr></table>
 <h2>Research Interests</h2>
-<p>Decentralized optimization and learning.
+<p>Decentralized optimization.
 
 </p>
 <h2>Education</h2>
@@ -74,7 +74,7 @@ MathJax.Hub.Config({
 <li><p><b>Jingwang Li</b>, Qing An and Housheng Su*. <a href="https://doi.org/10.1016/j.amc.2022.127801" target=&ldquo;blank&rdquo;>&ldquo;Proximal nested primal-dual gradient algorithms for distributed constraint-coupled composite optimization&rdquo;</a>, <i>Applied Mathematics and Computation</i>, 2023.
 </p>
 </li>
-<li><p><b>Jingwang Li</b>, Suoxia Miao and Housheng Su*. <a href="https://doi.org/10.1007/978-981-19-6613-2_96" target=&ldquo;blank&rdquo;>&ldquo;Distributed Primal-Dual Mirror Dynamics for Constraint-Coupled Optimization&rdquo;</a>, <i>International Conference on Guidance, Navigation and Control</i>, 2022.
+<li><p><b>Jingwang Li</b>, Suoxia Miao and Housheng Su*. <a href="https://doi.org/10.1007/978-981-19-6613-2_96" target=&ldquo;blank&rdquo;>&ldquo;Distributed primal-dual mirror dynamics for constraint-coupled optimization&rdquo;</a>, <i>International Conference on Guidance, Navigation and Control</i>, 2022.
 
 </p>
 </li>
@@ -113,7 +113,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-03 22:02:18 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-08-27 14:32:59 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
